package stormstock.fw.event; 

// 交易引擎退出通知
message TranEngineExitNotify  { 
}

// 控制器启动通知
message ControllerStartNotify  { 
	enum TRANMODE {
    	HISTORYMOCK = 1;                  // 历史测试交易
    	REALTIME = 2;                     // 实时交易
  	}
	required TRANMODE eTranMode = 1; 
	optional string beginDate = 2;        // 是历史测试交易时，表示开始时间与结束时间
	optional string endDate = 3; 
}









